--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100,300italic" rel="stylesheet" type="text/css">
+    <title>Terence C.</title>
+</head>
+
 <body>
-    <h1>Girls 4 Change</h1>
+    <header>
+        <h1 class="main-title">Akilah</h1>
+        <p>The beginning of your education</p>
+        <div class="hero-text-box">
+            <img class="msg-code" src='resources/css/img/msger.jpeg' />
+            <p class="select-msg">Scan this Messenger Profile Code to get started</p>
+        </div>
+    </header>
 </body>
+
 </html>
