--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100,300italic" rel="stylesheet" type="text/css">
-    <title>Terence C.</title>
+    <title>Girls 4 Change: Akilah</title>
 </head>
 
 <body>
     <header>
+        <br>
         <h1 class="main-title">Akilah</h1>
         <p>The beginning of your education</p>
         <div class="hero-text-box">
             <img class="msg-code" src='resources/css/img/msger.jpeg' />
-            <p class="select-msg">Scan this Messenger Profile Code to get started</p>
+            <div class="msg-code-text">
+                <p class="select-msg">Scan this Messenger Profile Code to get started</p>
+            </div>
         </div>
     </header>
 </body>
