--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="hero-text-box">
             <img class="msg-code" src='resources/css/img/msger.jpeg' />
             <div class="msg-code-text">
-                <p class="select-msg">Scan this Messenger Profile Code to get started</p>
+                <div class="select-msg">Scan this Messenger Profile Code to get started</p>
             </div>
         </div>
     </header>
